# flexi-receiver

./: .gitignore  Cargo.toml
.github/workflows/: release.yaml  test.yaml
src/: main.rs
src/digit/: errors.rs  mod.rs  packet.rs
src/serial/: connection.rs  error.rs  mod.rs  traits.rs
