[package]
name = "flexi_receiver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
lto = true

[dependencies]
thiserror = "1.0"
serialport = "4.0"
metrics = "0.20.1"
metrics-exporter-prometheus = "0.11.0"
